package br.edu.ifpb;

public interface ElevadorEstado {
    void acionarBotao(int andar);
    void abrirPorta();
    void fecharPorta();
    void mover();
}
