package br.edu.ifpb;

public interface EstrategiaAtendimento {
    void processarFila(Elevador elevador);
}

